# cpp-template

./: .clang-format  .cmake-format  CMakeLists.txt  CMakePresets.json  README.md  \  conanfile.py
.github/workflows/: conan.yml
include/: example.hpp
src/: example.cpp  main.cpp
